Implementando metodo de salvar no model de Aluno

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Models\\": "app/models/",
             "Database\\": "database/"
         }
     }
