--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "psr-4": {
             "App\\": "app/",
             "App\\Models\\": "app/models/",
-            "Database\\": "database/"
+            "Database\\": "database/",
+            "Routes\\": "routes/",
+            "Controllers\\": "controllers/"
         }
     }
 }
