--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "psr-4": {
             "App\\": "app/",
             "App\\Models\\": "app/models/",
+            "Controllers\\": "app/controllers/",
             "Database\\": "database/",
-            "Routes\\": "routes/",
-            "Controllers\\": "controllers/"
+            "Routes\\": "routes/"
         }
     }
 }
