--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
         "psr-4": {
             "App\\": "app/",
             "App\\Models\\": "app/models/",
+            "App\\Models\\Aluno\\": "app/models/aluno/",
+            "App\\Models\\Escola\\": "app/models/escola/",
             "Controllers\\": "app/controllers/",
+            "Resources\\": "resources/",
+            "Resources\\Views\\": "resources/views/",
             "Database\\": "database/",
             "Routes\\": "routes/"
         }
