Refatorando namespaces dos controllers

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "psr-4": {
             "App\\": "app/",
             "App\\Models\\": "app/models/",
-            "Controllers\\": "app/controllers/",
+            "App\\Controllers\\": "app/controllers/",
             "Resources\\": "resources/",
             "Resources\\Views\\": "resources/views/",
             "Database\\": "database/",
