Arrumando problema do jquery e implementando funcionalidade de escolher escola na pagina de turmas

--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/Ivoff/Teste-Pratico-Estuda.com/issues"
   },
   "homepage": "https://github.com/Ivoff/Teste-Pratico-Estuda.com#readme",
-  "dependencies": {
-    "jquery": "^3.4.1"
-  }
+  "dependencies": {}
 }
